welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: ':' expected but '(' found.
	def verifFin(estFaceMur()) {
                               ^SnakeBuggle:39: error: identifier expected but '}' found.
}
^