welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def verifFin(estFaceMur()) {
		if (estFaceMur() == true) {
			if (getDirection() == Direction.EST) {
				gauche();
				if (estFaceMur() == true) {
					return true;
				} else { 
					return false;
				}
			} else if (getDirection() == Direction.OUEST) {
				droite();
				if (estFaceMur() == true) {
					return true;
				} else { 
					return false;
				}
			}
		} else {
			return false;
		}
	}
	baisseBrosse();
	while (verifFin() == false) {
		for (i <- 1 to getMondeHauteur()-1) {
			avance(getMondeLargeur()-1);
			if (getDirection() == Direction.EST) {
				gauche();
				avance();
				droite();	
			} else if (getDirection() == Direction.OUEST) {
				droite();
				avance();
				gauche();
			}
		}
	}
}
